2005-04-08 Scott Dattalo <scott@dattalo.com>
	* cli/parse.yy, cli/scan.ll: Added a "reg()" operator that can cast
	integers into registers (although this is not fully implemented
	yet).
	A single quote before an identifier now acts as an 'escape'
	character. This allows user defined strings to collide with gpsim
	built in strings. (e.g. If a user has a variable named help, its
	contents can be examined by typing 'help at the command line).

2005-04-07 J.R. Heisey <jrheisey@sourceforge.com>
	src/breakpoints.cc: Fixed a memory leak by properly removing
	chained BreakpointRegister objects from the Register chain when
	clearing a break object. When the chain is properly maintained
	the object may be deleted.

2005-04-07 J.R. Heisey <jrheisey@sourceforge.com>
	* cli/scan.ll, cli/parse.yy, cli/cmd_break.cc,h,
	src/processor.cc,h, src/pic-processor.cc, operator.cc,h,
	src/breakpoints.cc: Changed the break command syntax.
	Added code to support the syntax.

2005-04-07 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_manager.h, cli/cmd_manager.cc, cli/cmd_gpsim.h:
	moved from cli/ to src/
	* src/processor.cc, src/Makefile.am, src/interface.cc,
	src/processor.cc, gpsim/main.cc, cli/Makefile.am,
	cli/cmd_manager.cc, cli/cmd_module.cc, cli/cmd_shell.cc:
	Updated these files to use the newly relocated .h files. The reason
	for doing this is to fix a src/ dependency on cli/ files. When
	src/ depends on cli/ then any module that links against the gpsim
	library must also link against the cli library.
	* src/registers.cc: added a Bit class (currently not used though)
	* src/symbol.cc: attribute symbols that wrap other symbols now change
	the name of the wrapped symbol. This allows heirarchical names
	such as processor_name.attribute to appear in the symbol table.

2005-04-06 J.R. Heisey <jrheisey@sourceforge.com>
	* src/processor.cc.h: Two new break message functions.

2005-04-05 J.R. Heisey <jrheisey@sourceforge.com>
	* src/value.h, src/registers.cc,h, src/processor.cc.h,